[tool.poetry]
name = "poetry-introduction"
version = "0.1.0"
description = ""
authors = ["Werbster <wmarques.88@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"
black = "^22.3.0"
pipenv-to-requirements = "^0.9.0"
pylint = "^2.13.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
