[tool.poetry]
name = "poetry-introduction"
version = "0.1.0"
description = ""
authors = ["Werbster <wmarques.88@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
